# gw2-Waitingame

./: CMakeLists.txt  README.md  build.sh  mingw-toolchain.cmake  nexus_addon_lessons_learned(1).txt
.claude/: settings.local.json
src/: addon.cpp  events.h  game.cpp  game.h  map_png.h  render.cpp
